--- a/src/app/sing-up/sing-up.component.html
+++ b/src/app/sing-up/sing-up.component.html
@@ -1,1 +1,8 @@
-<p>sing-up works!</p>
+<div class="card" style="width: 18rem;">
+   
+    <div class="card-body">
+      <h5 class="card-title">Sign Up</h5>
+      <button type="button" (click)="googleAuth()" class="btn btn-primary">Contiune with Google</button>
+
+    </div>
+  </div>
