--- a/src/app/sing-in/sing-in.component.html
+++ b/src/app/sing-in/sing-in.component.html
@@ -1,1 +1,29 @@
-<p>sing-in works!</p>
+<div class="card" >
+   
+    <div class="card-body">
+      <h5 class="card-title">Sign In</h5>
+
+      <div class="form-floating mb-3">
+        <input type="email" [(ngModel)]="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+      </div>
+
+      <div class="input-group mb-3">
+        <input [type]="visiblePassword()" [(ngModel)]="password" class="form-control" placeholder="Password" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <span class="input-group-text" id="basic-addon2"><i (click)="szem=!szem" class="bi bi-eye"></i></span>
+      </div>
+
+
+      <div class="input-group mb-3">
+         <button [disabled]="isNotValidSignUp()" type="button" (click)="signInMailPassword()" class="btn btn-primary">Sign In</button>
+
+      </div>
+      <div *ngIf="mailRegError" class="alert alert-danger" role="alert">
+        {{mailRegText}}
+      </div>
+ 
+
+      <button type="button" (click)="googleAuth()" class="btn btn-primary">Contiune with Google</button>
+
+    </div>
+  </div>
