--- a/src/app/sing-in/sing-in.component.html
+++ b/src/app/sing-in/sing-in.component.html
@@ -16,8 +16,9 @@
 
       <div class="input-group mb-3">
          <button [disabled]="isNotValidSignUp()" type="button" (click)="signInMailPassword()" class="btn btn-primary">Sign In</button>
-
+         <a class="ms-4 link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" routerLink="/forgotpassword">Forgot Password</a>
       </div>
+
       <div *ngIf="mailRegError" class="alert alert-danger" role="alert">
         {{mailRegText}}
       </div>
