--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,6 +10,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="data">Data</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="users">Users</a>
+          </li>
           <li *ngIf="!user" class="nav-item">
             <a class="nav-link" routerLink="signin">Sing In</a>
           </li>
